--- a/reports/html-reports/cucumber-html-reports/overview-steps.html
+++ b/reports/html-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>ArvalTestAutomation</td>
         <td>1</td>
-      <td>28 May 2021, 11:12</td>
+      <td>02 Jun 2021, 21:17</td>
     </tr>
   </tbody>
 </table>
@@ -116,185 +116,185 @@ $(document).ready(function() {
             <tr>
               <td class="location">StepDefinitions.BadCharacterManagementSteps.navigateToMarkBMW()</td>
               <td>1</td>
-              <td class="duration" data-value="16046000000">16.046</td>
-              <td class="duration" data-value="16046000000">16.046</td>
-              <td class="duration" data-value="16046000000">16.046</td>
+              <td class="duration" data-value="7977000000">7.977</td>
+              <td class="duration" data-value="7977000000">7.977</td>
+              <td class="duration" data-value="7977000000">7.977</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.BadCharacterManagementSteps.navigateToProfessionalPage()</td>
               <td>1</td>
-              <td class="duration" data-value="12024000000">12.024</td>
-              <td class="duration" data-value="12024000000">12.024</td>
-              <td class="duration" data-value="12024000000">12.024</td>
+              <td class="duration" data-value="5137000000">5.137</td>
+              <td class="duration" data-value="5137000000">5.137</td>
+              <td class="duration" data-value="5137000000">5.137</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.ChangeLangWorkingSteps.changeLanguage()</td>
               <td>1</td>
-              <td class="duration" data-value="17915000000">17.915</td>
-              <td class="duration" data-value="17915000000">17.915</td>
-              <td class="duration" data-value="17915000000">17.915</td>
+              <td class="duration" data-value="10163000000">10.163</td>
+              <td class="duration" data-value="10163000000">10.163</td>
+              <td class="duration" data-value="10163000000">10.163</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.ContactLinkNotWorking.clickOnButtonContact()</td>
               <td>1</td>
-              <td class="duration" data-value="25000000">0.025</td>
-              <td class="duration" data-value="25000000">0.025</td>
-              <td class="duration" data-value="25000000">0.025</td>
+              <td class="duration" data-value="282000000">0.282</td>
+              <td class="duration" data-value="282000000">0.282</td>
+              <td class="duration" data-value="282000000">0.282</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.ContactLinkNotWorking.searchCar()</td>
               <td>1</td>
-              <td class="duration" data-value="25334000000">25.334</td>
-              <td class="duration" data-value="25334000000">25.334</td>
-              <td class="duration" data-value="25334000000">25.334</td>
+              <td class="duration" data-value="6893000000">6.893</td>
+              <td class="duration" data-value="6893000000">6.893</td>
+              <td class="duration" data-value="6893000000">6.893</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.CucumberHooks.setup()</td>
               <td>9</td>
-              <td class="duration" data-value="2216000000">2.216</td>
-              <td class="duration" data-value="2216000000">3.332</td>
-              <td class="duration" data-value="19944000000">19.944</td>
+              <td class="duration" data-value="1872888888">1.872</td>
+              <td class="duration" data-value="1872888888">6.151</td>
+              <td class="duration" data-value="16856000000">16.856</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.CucumberHooks.teardown()</td>
               <td>9</td>
-              <td class="duration" data-value="0">0.000</td>
-              <td class="duration" data-value="0">0.000</td>
-              <td class="duration" data-value="0">0.000</td>
+              <td class="duration" data-value="1009333333">1.009</td>
+              <td class="duration" data-value="1009333333">2.895</td>
+              <td class="duration" data-value="9084000000">9.084</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.ImageNotLoadSteps.checkLoadImage()</td>
               <td>1</td>
-              <td class="duration" data-value="4166000000">4.166</td>
-              <td class="duration" data-value="4166000000">4.166</td>
-              <td class="duration" data-value="4166000000">4.166</td>
+              <td class="duration" data-value="1648000000">1.648</td>
+              <td class="duration" data-value="1648000000">1.648</td>
+              <td class="duration" data-value="1648000000">1.648</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.ImageNotLoadSteps.navigateToLinkFleetManagementSolutions()</td>
               <td>1</td>
-              <td class="duration" data-value="9624000000">9.624</td>
-              <td class="duration" data-value="9624000000">9.624</td>
-              <td class="duration" data-value="9624000000">9.624</td>
+              <td class="duration" data-value="3052000000">3.052</td>
+              <td class="duration" data-value="3052000000">3.052</td>
+              <td class="duration" data-value="3052000000">3.052</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.ImageNotLoadSteps.navigateToLinkWhyArval()</td>
               <td>1</td>
-              <td class="duration" data-value="11914000000">11.914</td>
-              <td class="duration" data-value="11914000000">11.914</td>
-              <td class="duration" data-value="11914000000">11.914</td>
+              <td class="duration" data-value="2352000000">2.352</td>
+              <td class="duration" data-value="2352000000">2.352</td>
+              <td class="duration" data-value="2352000000">2.352</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.IncorretAlignmentComponentSteps.navigateToCarInLongTermRental()</td>
               <td>1</td>
-              <td class="duration" data-value="11984000000">11.984</td>
-              <td class="duration" data-value="11984000000">11.984</td>
-              <td class="duration" data-value="11984000000">11.984</td>
+              <td class="duration" data-value="3644000000">3.644</td>
+              <td class="duration" data-value="3644000000">3.644</td>
+              <td class="duration" data-value="3644000000">3.644</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.IncorretAlignmentComponentSteps.verfiyPositionElement()</td>
               <td>1</td>
-              <td class="duration" data-value="386000000">0.386</td>
-              <td class="duration" data-value="386000000">0.386</td>
-              <td class="duration" data-value="386000000">0.386</td>
+              <td class="duration" data-value="290000000">0.290</td>
+              <td class="duration" data-value="290000000">0.290</td>
+              <td class="duration" data-value="290000000">0.290</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.IneffectiveJobSearchFilterSteps.ClickOnTheLinkAboutArval()</td>
               <td>1</td>
-              <td class="duration" data-value="8711000000">8.711</td>
-              <td class="duration" data-value="8711000000">8.711</td>
-              <td class="duration" data-value="8711000000">8.711</td>
+              <td class="duration" data-value="2707000000">2.707</td>
+              <td class="duration" data-value="2707000000">2.707</td>
+              <td class="duration" data-value="2707000000">2.707</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.IneffectiveJobSearchFilterSteps.ClickOnTheLinkCareersJobs()</td>
               <td>1</td>
-              <td class="duration" data-value="11857000000">11.857</td>
-              <td class="duration" data-value="11857000000">11.857</td>
-              <td class="duration" data-value="11857000000">11.857</td>
+              <td class="duration" data-value="4567000000">4.567</td>
+              <td class="duration" data-value="4567000000">4.567</td>
+              <td class="duration" data-value="4567000000">4.567</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.IneffectiveJobSearchFilterSteps.SelectCareerCDI()</td>
               <td>1</td>
-              <td class="duration" data-value="9106000000">9.106</td>
-              <td class="duration" data-value="9106000000">9.106</td>
-              <td class="duration" data-value="9106000000">9.106</td>
+              <td class="duration" data-value="3834000000">3.834</td>
+              <td class="duration" data-value="3834000000">3.834</td>
+              <td class="duration" data-value="3834000000">3.834</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.InsecureLinkSteps.ckeckAllLink()</td>
               <td>1</td>
-              <td class="duration" data-value="22755000000">22.755</td>
-              <td class="duration" data-value="22755000000">22.755</td>
-              <td class="duration" data-value="22755000000">22.755</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="14349000000">14.349</td>
+              <td class="duration" data-value="14349000000">14.349</td>
+              <td class="duration" data-value="14349000000">14.349</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.LinkNotFoundSteps.aDropDownDescriptionIsDisplayedClickOnTheLinkDiscoverProductsAndServices()</td>
               <td>1</td>
-              <td class="duration" data-value="70000000">0.070</td>
-              <td class="duration" data-value="70000000">0.070</td>
-              <td class="duration" data-value="70000000">0.070</td>
+              <td class="duration" data-value="215000000">0.215</td>
+              <td class="duration" data-value="215000000">0.215</td>
+              <td class="duration" data-value="215000000">0.215</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.LinkNotFoundSteps.navigateToInternationalPartner()</td>
               <td>1</td>
-              <td class="duration" data-value="9347000000">9.347</td>
-              <td class="duration" data-value="9347000000">9.347</td>
-              <td class="duration" data-value="9347000000">9.347</td>
+              <td class="duration" data-value="3009000000">3.009</td>
+              <td class="duration" data-value="3009000000">3.009</td>
+              <td class="duration" data-value="3009000000">3.009</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.LinkNotFoundSteps.navigateToexpertiseAndProfessional()</td>
               <td>1</td>
-              <td class="duration" data-value="2717000000">2.717</td>
-              <td class="duration" data-value="2717000000">2.717</td>
-              <td class="duration" data-value="2717000000">2.717</td>
+              <td class="duration" data-value="2572000000">2.572</td>
+              <td class="duration" data-value="2572000000">2.572</td>
+              <td class="duration" data-value="2572000000">2.572</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.LinkNotFoundSteps.scrollerEtFaireUnClicSurLOffreLocationLongueDur&eacute;eDArval()</td>
               <td>1</td>
-              <td class="duration" data-value="10048000000">10.048</td>
-              <td class="duration" data-value="10048000000">10.048</td>
-              <td class="duration" data-value="10048000000">10.048</td>
+              <td class="duration" data-value="2226000000">2.226</td>
+              <td class="duration" data-value="2226000000">2.226</td>
+              <td class="duration" data-value="2226000000">2.226</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.OpenHomePageStep.user_connect_to_the_home_page()</td>
               <td>8</td>
-              <td class="duration" data-value="12099125000">12.099</td>
-              <td class="duration" data-value="12099125000">14.524</td>
-              <td class="duration" data-value="96793000000">1:36.793</td>
+              <td class="duration" data-value="7902250000">7.902</td>
+              <td class="duration" data-value="7902250000">9.829</td>
+              <td class="duration" data-value="63218000000">1:3.218</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.SlowLoadingHomePageSteps.countTimeLoadingPage()</td>
               <td>1</td>
-              <td class="duration" data-value="0">0.000</td>
-              <td class="duration" data-value="0">0.000</td>
-              <td class="duration" data-value="0">0.000</td>
+              <td class="duration" data-value="5811000000">5.811</td>
+              <td class="duration" data-value="5811000000">5.811</td>
+              <td class="duration" data-value="5811000000">5.811</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">StepDefinitions.SlowLoadingHomePageSteps.navigateToHomePage()</td>
               <td>1</td>
-              <td class="duration" data-value="11557000000">11.557</td>
-              <td class="duration" data-value="11557000000">11.557</td>
-              <td class="duration" data-value="11557000000">11.557</td>
+              <td class="duration" data-value="8860000000">8.860</td>
+              <td class="duration" data-value="8860000000">8.860</td>
+              <td class="duration" data-value="8860000000">8.860</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -303,9 +303,9 @@ $(document).ready(function() {
           <tr>
             <td>23</td>
             <td>46</td>
-            <td class="duration">6.789</td>
-            <td class="duration">1:36.793</td>
-            <td class="duration">5:12.323</td>
+            <td class="duration">3.885</td>
+            <td class="duration">1:3.218</td>
+            <td class="duration">2:58.746</td>
             <td>Totals</td>
           </tr>
         </tfoot>
