--- a/reports/html-reports/cucumber-html-reports/report-tag_3911511460.html
+++ b/reports/html-reports/cucumber-html-reports/report-tag_3911511460.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Feature: access direct link</title>
+<title>Cucumber Reports (no 1) - Tag: @Bug_495</title>
 
 </head>
 <body>
@@ -89,7 +89,7 @@ $(document).ready(function() {
 
 <div id="report-lead" class="container-fluid">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Feature Report</h2>
+    <h2>Tag Report</h2>
   </div>
 </div>
 
@@ -108,7 +108,7 @@ $(document).ready(function() {
     <th colspan="2">Features</th>
   </tr>
   <tr>
-    <th>Feature</th>
+    <th>Tag</th>
     <th class="passed">Passed</th>
     <th class="failed">Failed</th>
     <th class="skipped">Skipped</th>
@@ -128,19 +128,19 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">access direct link</td>
-          <td      class="passed"    >2</td>
+          <td class="tagname">@Bug_495</td>
+          <td      class="passed"    >1</td>
           <td >0</td>
           <td >0</td>
           <td >0</td>
           <td >0</td>
-          <td class="total">2</td>
+          <td class="total">1</td>
 
           <td  class="passed"    >1</td>
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="14671000000">14.671</td>
+          <td class="duration" data-value="14349000000">14.349</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -167,40 +167,30 @@ $(document).ready(function() {
 <div class="container-fluid" id="report">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <div class="feature">
+      <div class="elements">
 
-<div class="tags indention">
-</div>
-
-
-<div class="brief passed">
-  <span class="keyword indention">Feature</span>
-  <span class="name">access direct link</span>
-
-
-</div>
-
-        <div class="description indention"></div>
-
-        <div class="elements inner-level">
 
 <div class="element">
+    <div class="indention">
+      <b>Feature:</b>
+      <a href="report-feature_1_4287836835.html"></a>
+    </div>
 
 
 <div class="tags indention">
     <b>Tags:</b>
-       <a href="report-tag_3911511309.html">@Bug_449</a>
+       <a href="report-tag_3911511460.html">@Bug_495</a>
 </div>
 
 
-  <span class="lead-duration duration">14.671</span>
+  <span class="lead-duration duration">14.349</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
 <div class="brief passed">
   <span class="keyword indention">Scenario</span>
-  <span class="name">Slow loading of the home page</span>
+  <span class="name">Redirection to insecure links</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -231,7 +221,7 @@ $(document).ready(function() {
             <span class="keyword indention">Before</span>
               <span class="location name">StepDefinitions.CucumberHooks.setup()</span>
 
-  <span class="lead-duration duration">6.151</span>
+  <span class="lead-duration duration">1.337</span>
 
           </div>
 
@@ -264,38 +254,11 @@ $(document).ready(function() {
       <div class="step">
 
 
-<div class="brief step-name-Given passed">
-  <span class="keyword indention">Given</span>
-  <span class="name">user navigate to home page</span>
+<div class="brief step-name-And passed">
+  <span class="keyword indention">And</span>
+  <span class="name">ckeck all link to verify insecure links</span>
 
-  <span class="lead-duration duration">8.860</span>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      </div>
-      <div class="step">
-
-
-<div class="brief step-name-Then passed">
-  <span class="keyword indention">Then</span>
-  <span class="name">count number of loading times</span>
-
-  <span class="lead-duration duration">5.811</span>
+  <span class="lead-duration duration">14.349</span>
 
 </div>
 
@@ -340,7 +303,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">StepDefinitions.CucumberHooks.teardown()</span>
 
-  <span class="lead-duration duration">2.895</span>
+  <span class="lead-duration duration">0.723</span>
 
           </div>
 
@@ -357,7 +320,6 @@ $(document).ready(function() {
   </div>
 </div>
 
-        </div>
 
       </div>
     </div>
